--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noindex">
+    <meta name="robots" content="nofollow">
     <meta name="description" content="mon portfolio - k.m.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>mon portfolio - k.m.</title>
@@ -24,125 +26,131 @@
 
             <nav id="gnav">
                 <ul>
-                    <li class="btn-top">
-                        <a href="#mv">toppage</a>
+                    <li class="btn-top" date-anchor="page1">
+                        <a href="#page1">toppage</a>
                     </li>
-                    <li class="nav-prof">
-                        <a href="#profile"><span>ワタシノコト</span></a>
+                    <li class="nav-prof" date-anchor="page2">
+                        <a href="#page2"><span>ワタシノコト</span></a>
                     </li>
-                    <li class="nav-skill">
-                        <a href="#skill"><span>デキルコト</span></a>
+                    <li class="nav-skill" date-anchor="page3">
+                        <a href="#page3"><span>デキルコト</span></a>
                     </li>
-                    <li class="nav-ga">
-                        <a href="#gallery"><span>ツクルモノ</span></a>
+                    <li class="nav-ga" date-anchor="page4">
+                        <a href="#page4"><span>ツクルモノ</span></a>
                     </li>
-                    <li class="nav-con">
-                        <a href="#contact"><span>レンラクサキ</span></a>
+                    <li class="nav-con" date-anchor="page5">
+                        <a href="#page5"><span>レンラクサキ</span></a>
                     </li>
                 </ul>
             </nav>
+
         </header>
 
 
 
         <main id="main">
-            <section id="mv">
-                <div class="mv-box">
-                    <img src="img/anime_500.gif" alt="メインビジュアル">
-                    <p><a href="index.html">Replay</a></p>
-                </div>
-            </section>
-            <!--mv-->
-
-            <section id="profile">
-                <h2 class="sec-title">C'est moi !</h2>
-                <div class="sec-txt prof-txt">
-                    <h3 class="txt-title">クニモト マイ</h3><br>
-                    <div class="txt-abc">
-                        <p><b>Graphic Design / Web Design / Direction</b></p>
+            <div class="main-inner">
+                <section id="mv" class="section">
+                    <div class="mv-box">
+                        <img src="img/mv_anime.gif" alt="メインビジュアル">
+                        <p class="re-320"><a href="index.html">Replay</a></p>
                     </div>
+                    <p class="re-768"><a href="index.html">Replay</a></p>
+                </section>
+                <!--mv-->
 
-                    <div class="txt-abc">
-                        <p>北海道出身<br>京都造形芸術大学卒</p>
-                    </div>
-                    <div class="txt-abc">
-                        <p>在学時より独学で各種グラフィック系ソフトを習得。<br>卒業後は販売業に従事、店づくりや企画立案に携わる。<br>京都での暮らしを経て渡仏、およそ二年間語学を学ぶ。<br>その間に、現地の子供たちに日本文化を教える講師を経験</p>
-                    </div>
-                    <div class="txt-abc">
-                        <p>帰国後は札幌でテレビディレクターとして勤務。<br>情報・ショッピング・パブリシティ・生中継とあらゆる番組を担当し、映像編集や小道具のデザイン・制作も自ら手掛ける。 </p>
-                    </div>
-                </div>
-                <!--sec-txt prof-txt-->
-            </section>
-            <!--profile-->
+                <section id="profile" class="section">
+                    <h2 class="sec-title">C'est moi !</h2>
+                    <div class="sec-txt prof-txt">
+                        <h3 class="txt-title">クニモト マイ</h3><br>
+                        <div class="txt-abc">
+                            <p><b>Graphic Design / Web Design / Direction</b></p>
+                        </div>
 
-            <section id="skill">
-                <h2 class="sec-title">Mes specialites</h2>
-                <div class="sec-txt skill-txt">
-                    <h3 class="txt-title">ツール</h3>
-                    <p>html 5 / CSS 3 / Java script / JQuery / Sass</p>
-                    <p>Photoshop / Illustrator / painter<br>ATOM / Brackets / DreamWeaver<br>Souse Tree / Final Cut Pro<br>Word / Excel / Poworpoint</p>
-                </div>
-                <!--sec-txt skill-txt-->
-                <div class="sec-txt skill-txt2">
-                    <h3 class="txt-title">スキル</h3>
-                    <div class="no-margin">
-                        <P>コミュニケーション / ヒアリング</P>
-                        <p>デザイン / ライティング</p>
-                        <p>ディレクション / プレゼンテーション</p>
-                        <P>書類作成 / 事務処理</P>
+                        <div class="txt-abc">
+                            <p>北海道出身<br>京都造形芸術大学卒</p>
+                        </div>
+                        <div class="txt-abc">
+                            <p>在学時より独学で各種グラフィック系ソフトを習得。<br>卒業後は販売業に従事、店づくりや企画立案に携わる。<br>京都での暮らしを経て渡仏、約二年間語学を学ぶ。<br>その間に、現地の子供たちに日本文化を教える講師を経験</p>
+                        </div>
+                        <div class="txt-abc">
+                            <p>帰国後は札幌でテレビディレクターとして勤務。<br>情報・ショッピング・パブリシティ・生中継とあらゆる番組を担当し、映像編集や小道具のデザイン・制作も自ら手掛ける。 </p>
+                        </div>
                     </div>
-                    <!--no-margin-->
-                </div>
-                <!--sec-txt skill-txt-->
-            </section>
-            <!--skill-->
+                    <!--sec-txt prof-txt-->
+                </section>
+                <!--profile-->
 
-            <section id="gallery">
-                <h2 class="sec-title">Les creations</h2>
-                <div class="sec-txt ga-txt">
-                    <h3 class="txt-title">イラストレーション</h3>
-
-                    <div class="illust">
-                        <a href="img/gallery_illust1.jpg"><img src="img/g_img_s1.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust2.jpg"><img src="img/g_img_s2.png" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust3.jpg"><img src="img/g_img_s3.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust4.jpg"><img src="img/g_img_s4.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust5.jpg"><img src="img/g_img_s5.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust6.jpg"><img src="img/g_img_s6.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust7.jpg"><img src="img/g_img_s7.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust8.jpg"><img src="img/g_img_s8.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust9.jpg"><img src="img/g_img_s9.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust10.jpg"><img src="img/g_img_s10.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust11.jpg"><img src="img/g_img_s11.jpg" alt="イラストレーション"></a>
-                        <a href="img/gallery_illust12.jpg"><img src="img/g_img_s12.jpg" alt="イラストレーション"></a>
+                <section id="skill" class="section">
+                    <h2 class="sec-title">Mes specialites</h2>
+                    <div class="sec-txt skill-txt">
+                        <h3 class="txt-title">ツール</h3>
+                        <p>html 5 / CSS 3 / Java script / JQuery / Sass</p>
+                        <p>Photoshop / Illustrator / painter<br>ATOM / Brackets / DreamWeaver<br>Souse Tree / Final Cut Pro<br>Word / Excel / Poworpoint</p>
                     </div>
-                    <!--illust-->
-                </div>
-                <!--sec-txt ga-txt-->
-
-                <div class="sec-txt ga-txt2">
-                    <h3 class="txt-title">デザイン</h3>
-                    <div class="design">
-                        <a href="img/g_bn_cakes.jpg"><img src="img/g_img_bn_sam1.jpg" alt="デザイン"></a>
-                        <a href="img/g_bn_nextone.jpg"><img src="img/g_img_bn_sam2.jpg" alt="デザイン"></a>
-                        <a href="img/g_bn_hotel.jpg"><img src="img/g_img_bn_sam3.jpg" alt="デザイン"></a>
+                    <!--sec-txt skill-txt-->
+                    <div class="sec-txt skill-txt2">
+                        <h3 class="txt-title">スキル</h3>
+                        <div class="no-margin">
+                            <P>コミュニケーション / ヒアリング</P>
+                            <p>デザイン / ライティング</p>
+                            <p>ディレクション / プレゼンテーション</p>
+                            <P>書類作成 / 事務処理</P>
+                        </div>
+                        <!--no-margin-->
                     </div>
-                </div>
-                <!--sec-txt ga-txt-->
-            </section>
-            <!--gallery-->
+                    <!--sec-txt skill-txt-->
+                </section>
+                <!--skill-->
 
-            <section id="contact" class="section">
-                <h2 class="sec-title">Ecrivez-moi !</h2>
-                <div class="sec-txt con-txt">
-                    <p>ご連絡はこちらよりお願いいたします。</p>
-                    <p class="con_adress">webkmkm@gmail.com</p>
-                </div>
-                <!--sec-txt con-txt-->
-                <p><small>&copy 2017 Kunimoto Mai All Rights Reserves.</small></p>
-            </section>
-            <!--contact-->
+                <section id="gallery" class="section">
+                    <h2 class="sec-title">Les creations</h2>
+                    <div class="sec-txt ga-txt">
+                        <h3 class="txt-title">イラストレーション</h3>
+
+                        <div class="illust">
+                            <a href="img/gallery_illust1.jpg"><img src="img/g_img_s1.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust2.jpg"><img src="img/g_img_s2.png" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust3.jpg"><img src="img/g_img_s3.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust4.jpg"><img src="img/g_img_s4.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust5.jpg"><img src="img/g_img_s5.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust6.jpg"><img src="img/g_img_s6.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust7.jpg"><img src="img/g_img_s7.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust8.jpg"><img src="img/g_img_s8.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust9.jpg"><img src="img/g_img_s9.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust10.jpg"><img src="img/g_img_s10.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust11.jpg"><img src="img/g_img_s11.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust12.jpg"><img src="img/g_img_s12.jpg" alt="イラストレーション"></a>
+                        </div>
+                        <!--illust-->
+                    </div>
+                    <!--sec-txt ga-txt-->
+
+                    <div class="sec-txt ga-txt2">
+                        <h3 class="txt-title">デザイン</h3>
+                        <div class="design">
+                            <a href="img/g_bn_cakes.jpg"><img src="img/g_img_bn_sam1.jpg" alt="デザイン"></a>
+                            <a href="img/g_bn_nextone.jpg"><img src="img/g_img_bn_sam2.jpg" alt="デザイン"></a>
+                            <a href="img/g_bn_hotel.jpg"><img src="img/g_img_bn_sam3.jpg" alt="デザイン"></a>
+                        </div>
+                    </div>
+                    <!--sec-txt ga-txt-->
+                </section>
+                <!--gallery-->
+
+                <section id="contact" class="section">
+                    <h2 class="sec-title">Ecrivez-moi !</h2>
+                    <div class="sec-txt con-txt">
+                        <p>ご連絡はこちらよりお願いいたします。</p>
+                        <p class="con_adress">webkmkm@gmail.com</p>
+                    </div>
+                    <!--sec-txt con-txt-->
+                    <p><small>&copy 2017 Kunimoto Mai All Rights Reserves.</small></p>
+                </section>
+                <!--contact-->
+
+            </div>
+            <!--main-inner-->
 
         </main>
         <div><a href="#head" class="btn-top-320">top</a></div>
@@ -150,8 +158,10 @@
     </div>
     <!--wrap-->
 
-    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.5/jquery.fullpage.min.js"></script>
     <script src="js/script.js"></script>
+
 </body>
 
 </html>
