あとこれだけ：jsの調整

--- a/public/index.html
+++ b/public/index.html
@@ -68,13 +68,19 @@
                         </div>
 
                         <div class="txt-abc">
-                            <p>北海道出身<br>京都造形芸術大学卒</p>
+                            <p>北海道出身 / 京都造形芸術大学卒</p>
                         </div>
                         <div class="txt-abc">
-                            <p>在学時より独学で各種グラフィック系ソフトを習得。<br>卒業後は販売業に従事、店づくりや企画立案に携わる。<br>京都での暮らしを経て渡仏、約二年間語学を学ぶ。<br>その間に、現地の子供たちに日本文化を教える講師を経験</p>
+                            <p>在学時より独学で各種グラフィック系ソフトを習得。</p>
+                            <p>卒業後は販売業に従事、店づくりや企画立案に携わる。</p>
+                            <p>京都での暮らしを経て渡仏、約二年間語学を学ぶ。</p>
+                            <p>その間に、現地の子供たちに日本文化を教える講師を経験。</p>
                         </div>
                         <div class="txt-abc">
-                            <p>帰国後は札幌でテレビディレクターとして勤務。<br>情報・ショッピング・パブリシティ・生中継とあらゆる番組を担当し、映像編集や小道具のデザイン・制作も自ら手掛ける。 </p>
+                            <p>帰国後は札幌でテレビディレクターとして勤務。</p>
+                            <p>情報・ショッピング・パブリシティ・生中継と</p>
+                            <p>あらゆる番組を担当し</p>
+                            <p>映像編集や小道具のデザイン・制作も自ら手掛ける。 </p>
                         </div>
                     </div>
                     <!--sec-txt prof-txt-->
@@ -158,8 +164,9 @@
     </div>
     <!--wrap-->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.5/vendors/scrolloverflow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.5/jquery.fullpage.min.js"></script>
+    
     <script src="js/script.js"></script>
 
 </body>
