--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="robots" content="noindex">
-    <meta name="robots" content="nofollow">
+    <meta name="robots" content="none">
     <meta name="description" content="mon portfolio - k.m.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>mon portfolio - k.m.</title>
@@ -99,13 +98,13 @@
                     <!--sec-txt skill-txt-->
                     <div class="sec-txt skill-txt2">
                         <h3 class="txt-title">スキル</h3>
-                        <div class="no-margin">
+                        <div class="skilltxt2-m">
                             <P>コミュニケーション / ヒアリング</P>
                             <p>デザイン / ライティング</p>
                             <p>ディレクション / プレゼンテーション</p>
                             <P>書類作成 / 事務処理</P>
                         </div>
-                        <!--no-margin-->
+                        <!--skilltxt2-m-->
                     </div>
                     <!--sec-txt skill-txt-->
                 </section>
@@ -116,7 +115,7 @@
                     <div class="sec-txt ga-txt">
                         <h3 class="txt-title">イラストレーション</h3>
 
-                        <div class="illust">
+                        <div class="sakuhin">
                             <a href="img/gallery_illust1.jpg"><img src="img/g_img_s1.jpg" alt="イラストレーション"></a>
                             <a href="img/gallery_illust2.jpg"><img src="img/g_img_s2.png" alt="イラストレーション"></a>
                             <a href="img/gallery_illust3.jpg"><img src="img/g_img_s3.jpg" alt="イラストレーション"></a>
@@ -130,18 +129,15 @@
                             <a href="img/gallery_illust11.jpg"><img src="img/g_img_s11.jpg" alt="イラストレーション"></a>
                             <a href="img/gallery_illust12.jpg"><img src="img/g_img_s12.jpg" alt="イラストレーション"></a>
                         </div>
-                        <!--illust-->
-                    </div>
-                    <!--sec-txt ga-txt-->
+                        <!--sakuhin-->
 
-                    <div class="sec-txt ga-txt2">
-                        <h3 class="txt-title">デザイン</h3>
-                        <div class="design">
+                        <h3 class="txt-title design">デザイン</h3>
+                        <div class="sakuhin">
                             <a href="img/g_bn_cakes.jpg"><img src="img/g_img_bn_sam1.jpg" alt="デザイン"></a>
                             <a href="img/g_bn_nextone.jpg"><img src="img/g_img_bn_sam2.jpg" alt="デザイン"></a>
                             <a href="img/g_bn_hotel.jpg"><img src="img/g_img_bn_sam3.jpg" alt="デザイン"></a>
                         </div>
-                        <!--デザイン-->
+                        <!--sakuhin-->
                     </div>
                     <!--sec-txt ga-txt-->
                 </section>
