--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,7 @@
                     <div class="mv-box">
                         <h2>
                             <img src="img/mv_anime.gif" alt="メインビジュアル"></h2>
-                        <p class="re-320"><a href="index.html">Replay</a></p>
                     </div>
-                    <p class="re-768"><a href="index.html">Replay</a></p>
                 </section>
                 <!--mv-->
 
@@ -146,8 +144,9 @@
                 <section id="contact" class="section">
                     <h2 class="sec-title">Ecrivez-moi !</h2>
                     <div class="sec-txt con-txt">
-                        <p class="con_annoce">ご連絡はこちらよりお願いいたします。</p>
-                        <p class="con_adress">webkmkm@gmail.com</p>
+                        <p class="con_annonce">ご連絡はこちらよりお願い致します。</p>
+                        <p class="con_annonce">(クリックするとメーラーが起動します)</p>
+                        <p class="con_adress"><a href="mailto:webkmkm@gmail.com">webkmkm@gmail.com</a></p>
                     </div>
                     <!--sec-txt con-txt-->
                     <p><small>&copy; 2017 Kunimoto Mai All Rights Reserved.</small></p>
