--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                 <section id="profile" class="section">
                     <h2 class="sec-title">C'est moi !</h2>
                     <div class="sec-txt prof-txt">
-                        <h3 class="txt-title">クニモト マイ</h3><br>
+                        <h3 class="txt-title design">クニモト マイ</h3><br>
                         <div class="txt-abc">
                             <p><b>Graphic Design / Web Design / Direction</b></p>
                         </div>
@@ -111,7 +111,7 @@
                 <section id="gallery" class="section fp-auto-height-responsive">
                     <h2 class="sec-title">Les creations</h2>
                     <div class="sec-txt ga-txt">
-                        <h3 class="txt-title">イラストレーション</h3>
+                        <h3 class="txt-title design">イラストレーション</h3>
 
                         <div class="sakuhin">
                             <a href="img/gallery_illust1.jpg"><img src="img/g_img_s1.jpg" alt="イラストレーション"></a>
@@ -145,7 +145,7 @@
                     <h2 class="sec-title">Ecrivez-moi !</h2>
                     <div class="sec-txt con-txt">
                         <p class="con_annonce">ご連絡はこちらよりお願い致します。</p>
-                        <p class="con_annonce">(クリックするとメーラーが起動します)</p>
+                        <p class="con_annonce">(アドレスをクリックするとメーラーが起動します)</p>
                         <p class="con_adress"><a href="mailto:webkmkm@gmail.com">webkmkm@gmail.com</a></p>
                     </div>
                     <!--sec-txt con-txt-->
