--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="none">
+    <meta name="robots" content="noindex">
     <meta name="description" content="mon portfolio - k.m.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>mon portfolio - k.m.</title>
@@ -41,6 +42,7 @@
                     <li class="nav-con" date-menu-anchor="page5">
                         <a href="#page5"><span>レンラクサキ</span></a>
                     </li>
+                    
                 </ul>
             </nav>
 
@@ -114,26 +116,36 @@
                         <h3 class="txt-title design">イラストレーション</h3>
 
                         <div class="sakuhin">
-                            <a href="img/gallery_illust1.jpg"><img src="img/g_img_s1.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust2.jpg"><img src="img/g_img_s2.png" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust3.jpg"><img src="img/g_img_s3.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust4.jpg"><img src="img/g_img_s4.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust5.jpg"><img src="img/g_img_s5.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust6.jpg"><img src="img/g_img_s6.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust7.jpg"><img src="img/g_img_s7.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust8.jpg"><img src="img/g_img_s8.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust9.jpg"><img src="img/g_img_s9.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust10.jpg"><img src="img/g_img_s10.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust11.jpg"><img src="img/g_img_s11.jpg" alt="イラストレーション"></a>
-                            <a href="img/gallery_illust12.jpg"><img src="img/g_img_s12.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust1.jpg" class="ga-y"><img src="img/g_img_s1.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust2.jpg" class="ga-y"><img src="img/g_img_s2.png" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust3.jpg" class="ga-y"><img src="img/g_img_s3.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust4.jpg" class="ga-y"><img src="img/g_img_s4.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust5.jpg" class="ga-y"><img src="img/g_img_s5.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust6.jpg" class="ga-y"><img src="img/g_img_s6.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust7.jpg" class="ga-y"><img src="img/g_img_s7.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust11.jpg" class="ga-y"><img src="img/g_img_s11.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust12.jpg" class="ga-y"><img src="img/g_img_s12.jpg" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust13.jpg" class="ga-y"><img src="img/g_img_s13.png" alt="イラストレーション"></a>
+                            <a href="img/gallery_illust14.jpg" class="ga-x"><img src="img/g_img_s14.png" alt="イラストレーション"></a>
+                        </div>
+                        <!--sakuhin-->
+                        
+                        <h3 class="txt-title design">印刷物</h3>
+                        <div class="sakuhin">
+                            <a href="img/ga_dtp_1.png" class="ga-xy"><img src="img/g_dtp_s1.jpg" alt="デザイン"></a>
+                            <a href="img/ga_dtp_2.png" class="ga-x"><img src="img/g_dtp_s2.jpg" alt="デザイン"></a>
+                            <a href="img/ga_dtp_3.png" class="ga-xy"><img src="img/g_dtp_s3.jpg" alt="デザイン"></a>
+                            <a href="img/ga_dtp_4.png" class="ga-x"><img src="img/g_dtp_s4.png" alt="デザイン"></a>
+                            <a href="img/ga_dtp_5.png" class="ga-x"><img src="img/g_dtp_s5.png" alt="デザイン"></a>   
                         </div>
                         <!--sakuhin-->
 
-                        <h3 class="txt-title design">デザイン</h3>
+                        <h3 class="txt-title design">WEB   / バナー</h3>
                         <div class="sakuhin">
-                            <a href="img/g_bn_cakes.jpg"><img src="img/g_img_bn_sam1.jpg" alt="デザイン"></a>
-                            <a href="img/g_bn_nextone.jpg"><img src="img/g_img_bn_sam2.jpg" alt="デザイン"></a>
-                            <a href="img/g_bn_hotel.jpg"><img src="img/g_img_bn_sam3.jpg" alt="デザイン"></a>
+                            <a href="img/g_bn_cakes.jpg" class="ga-y"><img src="img/g_img_bn_sam1.jpg" alt="デザイン"></a>
+                            <a href="img/g_bn_nextone.jpg" class="ga-x"><img src="img/g_img_bn_sam2.jpg" alt="デザイン"></a>
+                            <a href="img/g_bn_hotel.jpg" class="ga-y"><img src="img/g_img_bn_sam3.jpg" alt="デザイン"></a>
+                            <a href="img/btn_git.svg" class="ga-y"></a>
                         </div>
                         <!--sakuhin-->
                     </div>
