--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                     <li class="nav-con" date-menu-anchor="page5">
                         <a href="#page5"><span>レンラクサキ</span></a>
                     </li>
-                    
+
                 </ul>
             </nav>
 
@@ -129,25 +129,30 @@
                             <a href="img/gallery_illust14.jpg" class="ga-x"><img src="img/g_img_s14.png" alt="イラストレーション"></a>
                         </div>
                         <!--sakuhin-->
-                        
+
                         <h3 class="txt-title design">印刷物</h3>
                         <div class="sakuhin">
                             <a href="img/ga_dtp_1.png" class="ga-xy"><img src="img/g_dtp_s1.jpg" alt="デザイン"></a>
                             <a href="img/ga_dtp_2.png" class="ga-x"><img src="img/g_dtp_s2.jpg" alt="デザイン"></a>
                             <a href="img/ga_dtp_3.png" class="ga-xy"><img src="img/g_dtp_s3.jpg" alt="デザイン"></a>
                             <a href="img/ga_dtp_4.png" class="ga-x"><img src="img/g_dtp_s4.png" alt="デザイン"></a>
-                            <a href="img/ga_dtp_5.png" class="ga-x"><img src="img/g_dtp_s5.png" alt="デザイン"></a>   
+                            <a href="img/ga_dtp_5.png" class="ga-x"><img src="img/g_dtp_s5.png" alt="デザイン"></a>
                         </div>
                         <!--sakuhin-->
 
-                        <h3 class="txt-title design">WEB   / バナー</h3>
+                        <h3 class="txt-title design">WEB / バナー</h3>
                         <div class="sakuhin">
                             <a href="img/g_bn_cakes.jpg" class="ga-y"><img src="img/g_img_bn_sam1.jpg" alt="デザイン"></a>
                             <a href="img/g_bn_nextone.jpg" class="ga-x"><img src="img/g_img_bn_sam2.jpg" alt="デザイン"></a>
                             <a href="img/g_bn_hotel.jpg" class="ga-y"><img src="img/g_img_bn_sam3.jpg" alt="デザイン"></a>
-                            <a href="img/btn_git.svg" class="ga-y"></a>
                         </div>
                         <!--sakuhin-->
+
+                        <div class="git">
+
+                            <p class="link-git"><a href="https://github.com/ghkmkm/portfolio" target="_blank">このサイトのソースはこちらをクリック</a></p>
+                        </div>
+                        <!--git-->
                     </div>
                     <!--sec-txt ga-txt-->
                 </section>
