--- a/public/index.html
+++ b/public/index.html
@@ -151,8 +151,7 @@
                         <div class="git">
 
                             <p class="link-git"><a href="https://github.com/ghkmkm/portfolio" target="_blank">このサイトのソースはこちらをクリック</a></p>
-                        </div>
-                        <!--git-->
+                        </div><!--git-->
                     </div>
                     <!--sec-txt ga-txt-->
                 </section>
