--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="none">
-    <meta name="robots" content="noindex">
     <meta name="description" content="mon portfolio - k.m.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>mon portfolio - k.m.</title>
@@ -142,16 +141,17 @@
 
                         <h3 class="txt-title design">WEB / バナー</h3>
                         <div class="sakuhin">
-                            <a href="img/g_bn_cakes.jpg" class="ga-y"><img src="img/g_img_bn_sam1.jpg" alt="デザイン"></a>
-                            <a href="img/g_bn_nextone.jpg" class="ga-x"><img src="img/g_img_bn_sam2.jpg" alt="デザイン"></a>
-                            <a href="img/g_bn_hotel.jpg" class="ga-y"><img src="img/g_img_bn_sam3.jpg" alt="デザイン"></a>
+                            <a href="http://kmcc.starfree.jp/sample_1/" target="_blank" title="WEBページ"><img src="img/g_web_s1.png" alt="デザイン"></a>
+                            <a href="img/g_bn_cakes.jpg" class="ga-y" title="バナー"><img src="img/g_img_bn_sam1.jpg" alt="デザイン"></a>
+                            <a href="img/g_bn_nextone.jpg" class="ga-x" title="バナー"><img src="img/g_img_bn_sam2.jpg" alt="デザイン"></a>
+                            <a href="img/g_bn_hotel.jpg" class="ga-y" title="バナー"><img src="img/g_img_bn_sam3.jpg" alt="デザイン"></a>
                         </div>
                         <!--sakuhin-->
 
                         <div class="git">
-
                             <p class="link-git"><a href="https://github.com/ghkmkm/portfolio" target="_blank">このサイトのソースはこちらをクリック</a></p>
-                        </div><!--git-->
+                        </div>
+                        <!--git-->
                     </div>
                     <!--sec-txt ga-txt-->
                 </section>
