--- a/public/index.html
+++ b/public/index.html
@@ -136,6 +136,8 @@
                             <a href="img/ga_dtp_3.png" class="ga-xy"><img src="img/g_dtp_s3.jpg" alt="デザイン"></a>
                             <a href="img/ga_dtp_4.png" class="ga-x"><img src="img/g_dtp_s4.png" alt="デザイン"></a>
                             <a href="img/ga_dtp_5.png" class="ga-x"><img src="img/g_dtp_s5.png" alt="デザイン"></a>
+                            <a href="img/g_dtp_dm.jpg" class="ga-y"><img src="img/g_dtp_s6.png" alt="デザイン"></a>
+
                         </div>
                         <!--sakuhin-->
 
