--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,7 @@
                             <a href="img/ga_dtp_4.png" class="ga-x"><img src="img/g_dtp_s4.png" alt="デザイン"></a>
                             <a href="img/ga_dtp_5.png" class="ga-x"><img src="img/g_dtp_s5.png" alt="デザイン"></a>
                             <a href="img/g_dtp_dm.jpg" class="ga-y"><img src="img/g_dtp_s6.png" alt="デザイン"></a>
+                            <a href="img/g_dtp_chirashi.jpg" class="ga-y"><img src="img/g_dtp_s7.png" alt="デザイン"></a><a href="img/g_dtp_Pamphlet.png" class="ga-x"><img src="img/g_dtp_s8.png" alt="デザイン"></a>
 
                         </div>
                         <!--sakuhin-->
